# nature-risk

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude-flow/: daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json
.github/workflows/: deploy-pages.yml  deploy.yml
docs/: PRD-master.md  api-reference.md  architecture-overview.md  deployment-guide.md  developer-guide.md  index.html  qe-audit-report.md  user-guide.md
docs/adr/: ADR-001-static-site-architecture.md  ADR-002-mapping-library.md  ADR-003-uk-data-api-strategy.md  ADR-004-physics-calculation-engine.md  ADR-005-ai-llm-integration.md  ADR-006-report-generation.md  ADR-007-state-management.md  ADR-008-deployment-pipeline.md  README.md
docs/ddd/: domain-model.md
physics-engine/: Cargo.toml
physics-engine/src/: coastal.rs  inland.rs  lib.rs  types.rs  validation.rs
physics-engine/tests/: coastal_tests.rs  inland_tests.rs
src/: vite-env.d.ts
src/components/: App.css  App.tsx
src/components/CoPilot/: ActionStream.tsx  ChatMessage.tsx  CoPilotPane.tsx
src/components/Config/: AdvisorConfig.tsx
src/components/Export/: PdfExport.tsx
src/components/Layout/: SplitScreen.tsx
src/components/Map/: DrawControls.tsx  MapView.tsx
src/components/Widgets/: ConfidenceBadge.tsx  HydrographChart.tsx  (+2 more)
src/services/: advisor.ts  modeRouter.ts  pdfGenerator.ts  physicsLoader.ts  ukData.ts
src/store/: eventSourcing.ts  index.ts
src/types/: index.ts
worker/: package.json  wrangler.toml
worker/src/: index.ts
