[package]
name = "nature-risk-physics"
version = "0.1.0"
edition = "2021"
description = "Deterministic physics engine for Nature Risk — inland hydrology and coastal wave attenuation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
